[package]
name = "avl"
description = "A map and a set implemented with an AVL tree."
authors = ["Oliver Anhuth <oliver.anhuth@zoho.com>"]
edition = "2018"
version = "0.6.0"
documentation = "https://docs.rs/avl/0.6.0/avl/"
repository = "https://github.com/oliver-anhuth/avl"
homepage = "https://github.com/oliver-anhuth/avl"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "data-structures"]
exclude = ["AVL Trees.pdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
consistency_check = []

[dependencies]

[dev-dependencies]
rand = "0.7.3"
