[package]
name = "avl"
description = "A map and a set implemented with an AVL tree."
authors = ["Oliver Anhuth <oliver.anhuth@zoho.com>"]
edition = "2021"
version = "0.8.0"
documentation = "https://docs.rs/avl/0.8.0/avl/"
repository = "https://github.com/oliver-anhuth/avl"
homepage = "https://github.com/oliver-anhuth/avl"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "data-structures", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
consistency_check = []

[dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
