[package]
name = "benchmark"
version = "0.1.0"
authors = ["Oliver Anhuth <oliver.anhuth@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
avl = { path = ".." }
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "benches"
harness = false